Bug 1593104 - Fixes to issues encountered when building on Android with optimization r=Jamie

We noticed a handful of linker errors when building with other build optimization flags  -Os, -O2, and -O3 instead the default, -Oz.
(see Bug 1591725).
This change is intended to be 0-impact on functionality -- simply resolving the linker errors.

Differential Revision: https://phabricator.services.mozilla.com/D51312